# gravity-sim

./: CMakeLists.txt  README.md
src/: celestialBody.cpp  main.cpp  octreeNode.cpp  simulation.cpp
src/include/: celestialBody.h  octreeNode.h  simulation.h
